resolved major javascript map generation bugs

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <script src="src/App.js"></script> -->
-    <script src="dist/App.js"></script>
+    <script type="module" src="src/sketch.js"></script>
+    <!-- <script type="module" src="src/models/Boat.js"></script>
+    <script type="module" src="src/models/Country.js"></script>
+    <script type="module" src="src/models/Directions.js"></script>
+    <script type="module" src="src/models/Pixel.js"></script>
+    <script type="module" src="src/utils/Filter.js"></script>
+    <script type="module" src="src/utils/PixelMapGenerator.js"></script>
+    <script type="module" src="src/utils/Utils.js"></script> -->
 </body>
 </html>
